header and first one

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500;700&display=swap" rel="stylesheet">
     <title>Портфолио</title>
 </head>
 <body>
-    
+    <header class="header">
+        <a class="bold logo" href="#"><h3>RISHAT</h3></a>
+        <ul class="nav">
+            <a href="#"><li><h4>Обо мне</h4></li></a>
+            <a href="#"><li><h4>Портфолио</h4></li></a>
+            <!-- <a href="#"><li></li></a> -->
+        </ul>
+        <a class="bold button" href="#"><h3>Контакты</h3></a>
+    </header>
+    <div class="first_one">
+        <img src="./resources/images/hello.png" alt="">
+    </div>
 </body>
 <script src="./resources/app.js"></script>
 </html>
