--- a/index.html
+++ b/index.html
@@ -20,8 +20,21 @@
         </ul>
         <a class="bold button" href="#"><h3>Контакты</h3></a>
     </header>
+
     <div class="first_one">
         <img src="./resources/images/hello.png" alt="">
+    </div>
+
+    <div class="second_one">
+        <div class="block">
+            <h2 class="bold">Обо мне</h2>
+            <!-- <h3 class="bold center">Меня зовут Ришат</h3> -->
+            <h4 class="light">Мне 20 лет, обучаюсь в МГТУ имени Никола Эрнестовича Баумана, по образованию инженер. Помимо профильного образования обучаюсь на Frontend-Developer курсе платформы Codecademy. Имею неплохой опыт в создании лендингов для различных проектов: портфолио, сайт личного бренда и тд.</h4>
+    
+            <h3 class="center">Обэма был бы</h3>
+            <h4 class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamoident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+        </div>
+        
     </div>
 </body>
 <script src="./resources/app.js"></script>
