First try of my own gallery

--- a/index.html
+++ b/index.html
@@ -34,8 +34,21 @@
             <h3 class="center">Обэма был бы</h3>
             <h4 class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamoident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
         </div>
-        
     </div>
+
+    <div class="third_one">
+        <img id="image" src="./resources/images/site1.png" alt="">
+        <div class="right">
+            <h2 id="h2_text">Психология</h2>
+            <h4 id="h4_text" class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</h4>
+            <button id="one_button">one</button>
+            <button id="two_button">two</button>
+        </div>
+
+    </div>
+
+    
+
 </body>
 <script src="./resources/app.js"></script>
 </html>
