--- a/index.html
+++ b/index.html
@@ -37,14 +37,19 @@
     </div>
 
     <div class="third_one">
-        <img id="image" src="./resources/images/site1.png" alt="">
-        <div class="right">
-            <h2 id="h2_text">Психология</h2>
-            <h4 id="h4_text" class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</h4>
-            <button id="one_button">one</button>
-            <button id="two_button">two</button>
+        <div class="gallery">
+            <img id="image" src="./resources/images/site1.png" alt="">
+            <div class="right">
+                <h2 id="h2_text">Психология</h2>
+                <h4 id="h4_text" class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</h4>
+                <a href="#"><h4>dfdfdf</h4></a>
+                <div class="buttons">
+                    <button id="one_button">one</button>
+                    <button id="two_button">two</button>    
+                </div>
+                
+            </div>
         </div>
-
     </div>
 
     
