footer and some border-raduises

--- a/index.html
+++ b/index.html
@@ -57,18 +57,19 @@
 
     <div class="forth_one">
         <div class="contacts">
-            <h2>КОНТАКТЫ</h2>
+            <!-- <h2>КОНТАКТЫ</h2> -->
+            <h3 class="white">СВЯЗАТЬСЯ СО МНОЙ:</h3>
             <div class="list_of_contacts">
                 <div class="list">
-                    <a href="#" class="email"><h3 class="light">roxirovka@mail.ru</h3></a>
-                <div class="icons">
-                    <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-vk"></i></a>
-                    <a href="https://t.me/Lev3DsMax"class="icon icon_center"><i class="fa-brands fa-telegram"></i></a>
-                    <a href="https://wa.me/79858583717"class="icon"><i class="fa-brands fa-whatsapp"></i></a>
-                </div>
+                    <a href="#" class="email light"><h3 class="light">roxirovka@mail.ru</h3></a>
+                    <div class="icons">
+                        <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-vk"></i></a>
+                        <a href="https://t.me/Lev3DsMax"class="icon icon_center"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://wa.me/79858583717"class="icon"><i class="fa-brands fa-whatsapp"></i></a>
+                    </div>
                 </div>
                 
-                <h3>made by <a href="#">Rishat</a></h3>
+                <h3 class="light white">made by <a href="#" class="white">Rishat</a></h3>
             </div>
         </div>
     </div>
