--- a/index.html
+++ b/index.html
@@ -39,21 +39,37 @@
         </div>
     </div>
 
-    <!-- <div class="third_one">
-        <div class="gallery">
+
+
+
+    <div class="third_one">
+        <div class="gallery" id="gallery">
+            <img id="image" src="./resources/images/site1.png" alt="">
+            <div class="right">
+                <h2 id="h2_text">Портфолио</h2>
+                <h4 id="h4_text" class="light">Это мой сайт - портфолио. Я сделал его за несколько дней, решил что если уж я делаю сайты для кого-то, то почему бы не сделать его и себе. Кому нужно резюме в виде pdf файла, когда есть веб сайт?</h4>
+                <h4><a href="#" class="light">Перейти на сайт</a></h4>
+            </div>
+        </div>
+
+        <div class="gallery" id="gallery">
+            <img id="image" src="./resources/images/site3.png" alt="">
+            <div class="right">
+                <h2 id="h2_text">3D моделирование</h2>
+                <h4 id="h4_text" class="light">Это тоже портфолио, мой первый коммерческий сайт. Я делал его пару недель, учитывая постоянные правки как по просьбе заказчика, так и по моим, возникшим по ходу дела, идеям. И опять же, кому нужно резюме в виде pdf файла, когда есть веб сайт?</h4>
+                <h4><a href="#" class="light">Перейти на сайт</a></h4>
+            </div>
+        </div>
+
+        <div class="gallery" id="gallery">
+            <img id="image" src="./resources/images/site2.png" alt="">
             <div class="right">
                 <h2 id="h2_text">Психология</h2>
-                <h4 id="h4_text" class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</h4>
-                <h4><a href="#">dfdfdf</a></h4>
-                <div class="buttons">
-                    <button id="one_button">one</button>
-                    <button id="two_button">two</button>    
-                </div>
+                <h4 id="h4_text" class="light">Сайт - визитка. Делал его долго, но только потому что дедлайна как такового не было и постоянно возникали новые идеи где, как и что расположить, чтобы было красиво.</h4>
+                <h4><a href="#" class="light">Перейти на сайт</a></h4>
             </div>
-            <img id="image" src="./resources/images/site1.png" alt="">
-
         </div>
-    </div> -->
+    </div>
 
     <div class="forth_one">
         <div class="contacts">
@@ -77,5 +93,8 @@
     
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+
 <script src="./resources/app.js"></script>
 </html>
