new version only for pc

--- a/index.html
+++ b/index.html
@@ -28,45 +28,41 @@
             я создаю сайты</h1>
     </div>
 
+    <hr class="line">
+
     <div class="second_one">
         <div class="block">
             <h2 class="bold">ОБО МНЕ</h2>
             <!-- <h3 class="bold center">Меня зовут Ришат</h3> -->
-            <h4 class="light">Мне 20 лет, обучаюсь в МГТУ имени Николая Эрнестовича Баумана, по образованию инженер. Помимо профильного образования обучаюсь на Fullstack-Developer курсе платформы Codecademy. Имею неплохой опыт в создании лендингов для различных проектов: портфолио, сайт личного бренда и тд.</h4>
+            <h3 class="light">Мне 20 лет, обучаюсь в МГТУ имени Николая Эрнестовича Баумана, по образованию инженер. Помимо профильного образования обучаюсь на Fullstack-Developer курсе платформы Codecademy. Имею неплохой опыт в создании лендингов для различных проектов: портфолио, сайт личного бренда и тд.</h3>
     
-            <h3 class="center">ШАРЮ</h3>
-            <h4 class="light">Loem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatrion ullamoident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+            <h2 class="center">ШАРЮ</h2>
+            <h3 class="light">Loem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatrion ullamoident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
         </div>
     </div>
 
+    <hr class="line">
 
 
 
     <div class="third_one">
         <div class="gallery" id="gallery">
-            <img id="image" src="./resources/images/site1.png" alt="">
+            <img id="image" src="./resources/images/site3.png" alt="">
             <div class="right">
-                <h2 id="h2_text">Портфолио</h2>
-                <h4 id="h4_text" class="light">Это мой сайт - портфолио. Я сделал его за несколько дней, решил что если уж я делаю сайты для кого-то, то почему бы не сделать его и себе. Кому нужно резюме в виде pdf файла, когда есть веб сайт?</h4>
-                <h4><a href="#" class="light">Перейти на сайт</a></h4>
+                <h2 id="h2_text">3D МОДЕЛИРОВАНИЕ</h3>
+                <h3 id="h4_text" class="light">Это тоже портфолио, мой первый коммерческий сайт. Я делал его пару недель, учитывая постоянные правки как по просьбе заказчика, так и по моим, возникшим по ходу дела, идеям. И опять же, кому нужно резюме в виде pdf файла, когда есть веб сайт?</h3>
+                <h3><a href="#" class="light">Перейти на сайт</a></h3>
             </div>
         </div>
 
-        <div class="gallery" id="gallery">
-            <img id="image" src="./resources/images/site3.png" alt="">
-            <div class="right">
-                <h2 id="h2_text">3D моделирование</h2>
-                <h4 id="h4_text" class="light">Это тоже портфолио, мой первый коммерческий сайт. Я делал его пару недель, учитывая постоянные правки как по просьбе заказчика, так и по моим, возникшим по ходу дела, идеям. И опять же, кому нужно резюме в виде pdf файла, когда есть веб сайт?</h4>
-                <h4><a href="#" class="light">Перейти на сайт</a></h4>
-            </div>
-        </div>
+        <hr class="line">
 
         <div class="gallery" id="gallery">
             <img id="image" src="./resources/images/site2.png" alt="">
             <div class="right">
-                <h2 id="h2_text">Психология</h2>
-                <h4 id="h4_text" class="light">Сайт - визитка. Делал его долго, но только потому что дедлайна как такового не было и постоянно возникали новые идеи где, как и что расположить, чтобы было красиво.</h4>
-                <h4><a href="#" class="light">Перейти на сайт</a></h4>
+                <h2 id="h2_text">ПСИХОЛОГИЯ</h2>
+                <h3 id="h4_text" class="light">Сайт - визитка. Делал его долго, но только потому что дедлайна как такового не было и постоянно возникали новые идеи где, как и что расположить, чтобы было красиво.</h3>
+                <h3><a href="#" class="light">Перейти на сайт</a></h3>
             </div>
         </div>
     </div>
@@ -74,14 +70,13 @@
     <div class="forth_one">
         <div class="contacts">
             <!-- <h2>КОНТАКТЫ</h2> -->
-            <h3 class="white">СВЯЗАТЬСЯ СО МНОЙ:</h3>
             <div class="list_of_contacts">
                 <div class="list">
-                    <a href="#" class="email light"><h3 class="light">roxirovka@mail.ru</h3></a>
+                    <a href="#" class="email light"><img src="./resources/images/mail.png" alt=""><h3 class="light">roxirovka@mail.ru</h3></a>
                     <div class="icons">
-                        <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-vk"></i></a>
-                        <a href="https://t.me/Lev3DsMax"class="icon icon_center"><i class="fa-brands fa-telegram"></i></a>
-                        <a href="https://wa.me/79858583717"class="icon"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-vk"></i><h3 class="white light">группа ВК</h3></a>
+                        <a href="https://vk.com/jieba3108" class="icon center"><i class="fa-brands fa-telegram"></i><h3 class="white light">Телеграм</h3></a>
+                        <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-whatsapp"></i><h3 class="white light">WhatsApp</h3></a>
                     </div>
                 </div>
                 
