new version for mobile not yet

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 <div class="list">
                     <a href="#" class="email light"><img src="./resources/images/mail.png" alt=""><h3 class="light">roxirovka@mail.ru</h3></a>
                     <div class="icons">
-                        <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-vk"></i><h3 class="white light">группа ВК</h3></a>
-                        <a href="https://vk.com/jieba3108" class="icon center"><i class="fa-brands fa-telegram"></i><h3 class="white light">Телеграм</h3></a>
-                        <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-whatsapp"></i><h3 class="white light">WhatsApp</h3></a>
+                        <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-vk"></i><h3 class="white light nuna">группа ВК</h3></a>
+                        <a href="https://vk.com/jieba3108" class="icon center"><i class="fa-brands fa-telegram"></i><h3 class="white light nuna">Телеграм</h3></a>
+                        <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-whatsapp"></i><h3 class="white light nuna">WhatsApp</h3></a>
                     </div>
                 </div>
                 
