new version for mobile without header

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
     <div class="third_one">
         <div class="gallery" id="gallery">
-            <img id="image" src="./resources/images/site3.png" alt="">
+            <img id="image" class="peka" src="./resources/images/site3.png" alt="">
+            <img id="image" class="mobile" src="./resources/images/site33.png" alt="">
             <div class="right">
                 <h2 id="h2_text">3D МОДЕЛИРОВАНИЕ</h3>
                 <h3 id="h4_text" class="light">Это тоже портфолио, мой первый коммерческий сайт. Я делал его пару недель, учитывая постоянные правки как по просьбе заказчика, так и по моим, возникшим по ходу дела, идеям. И опять же, кому нужно резюме в виде pdf файла, когда есть веб сайт?</h3>
@@ -58,7 +59,8 @@
         <hr class="line">
 
         <div class="gallery" id="gallery">
-            <img id="image" src="./resources/images/site2.png" alt="">
+            <img id="image" class="peka" src="./resources/images/site2.png" alt="">
+            <img id="image" class="mobile" src="./resources/images/site22.png" alt="">
             <div class="right">
                 <h2 id="h2_text">ПСИХОЛОГИЯ</h2>
                 <h3 id="h4_text" class="light">Сайт - визитка. Делал его долго, но только потому что дедлайна как такового не было и постоянно возникали новые идеи где, как и что расположить, чтобы было красиво.</h3>
