mobile with header

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <title>Портфолио</title>
 </head>
 <body>
-    <!-- <header class="header">
-        <a class="bold logo" href="#"><h3>RISHAT</h3></a>
-        <ul class="nav">
-            <a href="#"><li><h4>Обо мне</h4></li></a>
-            <a href="#"><li><h4>Портфолио</h4></li></a>
-        </ul>
-    </header> -->
+    <header>
+        <div class="header">
+            <a class="bold logo" href="#"><h3>RISHAT</h3></a>
+            <a href="#" class="button"><h3 class="light white">контакты</h3></a>    
+        </div>
+    </header>
 
     <div class="first_one">
         <img src="./resources/images/photo.png" alt="">
