--- a/index.html
+++ b/index.html
@@ -92,5 +92,12 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 
+<script type="text/javascript">
+    window.addEventListener('scroll', function(){
+        var header = document.querySelector('.header');
+        header.classList.toggle('sticky', window.scrollY > 0);
+    });
+</script>
+
 <script src="./resources/app.js"></script>
 </html>
