icons and mobile icons

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
     
             <h2 class="center">ШАРЮ</h2>
             <h3 class="light">Loem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatrion ullamoident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+
+            <div class="icons_block">
+                <img src="./resources/images/icons/css-3.png" alt="">
+                <img src="./resources/images/icons/figma.png" alt="">
+                <img src="./resources/images/icons/git.png" alt="">
+                <img src="./resources/images/icons/github.png" alt="">
+                <img src="./resources/images/icons/js.png" alt="">
+            </div>
         </div>
     </div>
 
