--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <!-- <h2>КОНТАКТЫ</h2> -->
             <div class="list_of_contacts">
                 <div class="list">
-                    <a href="#" class="email light"><img src="./resources/images/mail.png" alt=""><h3 class="light">roxirovka@mail.ru</h3></a>
+                    <a href="" class="email light"><img src="./resources/images/mail.png" alt=""><h3 class="light">roxirovka@mail.ru</h3></a>
                     <div class="icons">
                         <a href="https://vk.com/jieba3108" class="icon"><i class="fa-brands fa-vk"></i><h3 class="white light nuna">группа ВК</h3></a>
                         <a href="https://vk.com/jieba3108" class="icon center"><i class="fa-brands fa-telegram"></i><h3 class="white light nuna">Телеграм</h3></a>
