some padding and img 50%

--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
         <div class="block">
             <h2 class="bold">ОБО МНЕ</h2>
             <!-- <h3 class="bold center">Меня зовут Ришат</h3> -->
-            <h3 class="light">Мне 20 лет, обучаюсь в МГТУ имени Николая Эрнестовича Баумана, по образованию инженер. Помимо профильного образования обучаюсь на Fullstack-Developer курсе платформы Codecademy. Имею неплохой опыт в создании лендингов для различных проектов: портфолио, сайт личного бренда и тд.</h3>
+            <h3 class="light">Мне 20 лет, обучаюсь в МГТУ им. Н.Э. Баумана, по образованию инженер. Помимо профильного образования обучаюсь на Fullstack-Developer курсе платформы Codecademy. Имею неплохой опыт в создании лендингов для различных проектов: портфолио, сайт личного бренда и тд.</h3>
     
-            <h2 class="center">ШАРЮ</h2>
-            <h3 class="light">Loem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatrion ullamoident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+            <h2 class="center">РАЗБИРАЮСЬ</h2>
+            <h3 class="light">Знаю HTML, CSS, JS , умею работать с VC Code, figma, Git, Github.</h3>
 
             <div class="icons_block">
                 <img src="./resources/images/icons/css-3.png" alt="">
-                <img src="./resources/images/icons/figma.png" alt="">
+                <img src="./resources/images/icons/js.png" alt="">
                 <img src="./resources/images/icons/git.png" alt="">
                 <img src="./resources/images/icons/github.png" alt="">
-                <img src="./resources/images/icons/js.png" alt="">
+                <img src="./resources/images/icons/figma.png" alt="">
+
             </div>
         </div>
     </div>
@@ -62,8 +63,8 @@
             <img id="image" class="mobile" src="./resources/images/site33.png" alt="">
             <div class="right">
                 <h2 id="h2_text">3D МОДЕЛИРОВАНИЕ</h3>
-                <h3 id="h4_text" class="light">Это тоже портфолио, мой первый коммерческий сайт. Я делал его пару недель, учитывая постоянные правки как по просьбе заказчика, так и по моим, возникшим по ходу дела, идеям. И опять же, кому нужно резюме в виде pdf файла, когда есть веб сайт?</h3>
-                <h3><a href="#" class="light">Перейти на сайт</a></h3>
+                <h3 id="h4_text" class="light">Это сайт-портфолио, мой первый коммерческий сайт. Я делал его пару недель, учитывая постоянные правки как по просьбе заказчика, так и по моим, возникшим по ходу дела, идеям. Кому нужно резюме в виде pdf файла, когда есть веб сайт?</h3>
+                <h3><a href="http://lev3d.ru" class="light">Перейти на сайт</a></h3>
             </div>
         </div>
 
@@ -75,7 +76,7 @@
             <div class="right">
                 <h2 id="h2_text">ПСИХОЛОГИЯ</h2>
                 <h3 id="h4_text" class="light">Сайт - визитка. Делал его долго, но только потому что дедлайна как такового не было и постоянно возникали новые идеи где, как и что расположить, чтобы было красиво.</h3>
-                <h3><a href="#" class="light">Перейти на сайт</a></h3>
+                <h3><a href="https://phychology-forme10.github.io/" class="light">Перейти на сайт</a></h3>
             </div>
         </div>
     </div>
