--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="first_one">
         <img src="./resources/images/photo.png" alt="">
         <h1>Привет, <br>
-            меня зовут Обэма <br>
+            меня зовут Ришат <br>
             я создаю сайты</h1>
     </div>
 
