--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500;700&display=swap" rel="stylesheet"> -->
 
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&display=swap" rel="stylesheet"> -->
 
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;400;500;700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;400;500;700&display=swap" rel="stylesheet"> -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Vollkorn:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@300;400&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/b2528fcf94.js" crossorigin="anonymous"></script>
 
     <title>Портфолио</title>
@@ -28,7 +32,7 @@
         <img src="./resources/images/photo.png" alt="">
         <h1>Привет, <br>
             меня зовут Ришат <br>
-            я создаю сайты</h1>
+           я  <span>создаю сайты</span></h1>
     </div>
 
     <hr class="line">
