--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="block">
             <h2 class="bold">ОБО МНЕ</h2>
             <!-- <h3 class="bold center">Меня зовут Ришат</h3> -->
-            <h3 class="light">Мне 20 лет, обучаюсь в МГТУ им. Н.Э. Баумана, по образованию инженер. Помимо профильного образования обучаюсь на Fullstack-Developer курсе платформы Codecademy. Имею неплохой опыт в создании лендингов для различных проектов: портфолио, сайт личного бренда и тд.</h3>
+            <h3 class="light">Мне 20 лет, обучаюсь в МГТУ им. Н.Э. Баумана, по образованию инженер. Помимо профильного образования обучаюсь на Fullstack-Developer курсе платформы Codecademy. Имею опыт в создании лендингов для различных проектов: портфолио, сайт личного бренда и тд.</h3>
     
             <h2 class="center">РАЗБИРАЮСЬ</h2>
             <h3 class="light">Знаю HTML, CSS, JS , умею работать с VC Code, figma, Git, Github.</h3>
